[build-system]
requires = ["setuptools"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
#version_file = "abacus/_version.py"

[project]
name = "abacus"
authors = [
    {name = "Ann Holmes", email="ann.holmes@vumc.org"}
]
description = "Data Dictionary Library"
readme = "README.md"
requires-python = ">3.7"
keywords = ["Research Data", "Data Dictionary"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["PyYAML",
                "rich",
                "pandas",
                "linkml"
                ]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)


[project.scripts]
summarize_csv = "abacus.scripts.summarize_csv:summarize_csv"
validate_csv = "abacus.scripts.validate_csv:validate_csv"
validate_linkml = "abacus.scripts.validate_linkml:main"